correct font size, font type, delete gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -119,16 +119,18 @@ h6 {
     margin-top: 10px;
 }
 
+/*  mainTop style begin |---> */
 
 .mainTop{
-    display: flex;
-    flex-direction: column;
     height: 1024px;
     width: 1440px;
+    display: flex;
+    flex-direction: column;
     justify-content:flex-end;
+    /* justify-content:flex-start: */
+
     align-items:center;
-    row-gap: 22px;
-    /* column-gap: 35px; */
+    /* row-gap: 22px; */
 
     background-image: 
         url("../images/Rectangle_2.png"), 
@@ -151,13 +153,14 @@ h6 {
     width: 745px;
     /* border: 2px solid burlywood; */
     color: white;
-    font-size: 28px;
+    font-family: "Quattrocento", serif;
+    /* font-size: 28px; */
     text-align: justify;
     ;
 }
 
 .branName{
-    height: 67px;
+    /* height: 67px; */
     max-width: 100%;
     width: 806px;
     /* border: 2px solid burlywood; */
@@ -174,5 +177,6 @@ h6 {
 }
 
 /* .pizza-3000285_1920{
-
 } */
+
+/* mainTop styles end --->| */
